--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "trie-search": "^1.3.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webpack-dev-middleware": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,8 +28,8 @@
     "eject": "react-scripts eject",
     "fetchdata": "node fetchdata.js",
     "extractdata": "node extractdata.js",
-    "server": "node-env-run server --exec nodemon | pino-colada",
-    "myserver": "cross-env NODE_DISABLE_COLORS=1 NODE_ENV=development node ./src/server/index.js"
+    "_server": "node-env-run server --exec nodemon | pino-colada",
+    "server": "cross-env NODE_DISABLE_COLORS=1 NODE_ENV=development node ./src/server/index.js"
   },
   "eslintConfig": {
     "extends": [
