--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "4.0.3",
     "trie-search": "^1.3.5",
     "web-vitals": "^1.1.2",
-    "webpack-dev-middleware": "^5.2.1"
+    "webpack-dev-middleware": "^5.2.1",
+    "cross-env": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,9 +50,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3"
   },
   "engines": {
     "node": "16"
