--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
+    "ejs": ">=3.1.7",
+    "immer": ">=9.0.6",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^3.0.0",
     "node-sass": "^6.0.1",
@@ -18,10 +21,10 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
+    "shell-quote": ">=1.7.3",
     "trie-search": "^1.3.5",
     "web-vitals": "^1.1.2",
-    "webpack-dev-middleware": "^5.2.1",
-    "cross-env": "^7.0.3"
+    "webpack-dev-middleware": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,5 +56,8 @@
   },
   "engines": {
     "node": "16"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.14"
   }
 }
